[project]
name = "robola"
version = "0.2.4"
description = "Robola MJCF Editor Local Bridge - Local Python Library for MuJoCo and Online Web mjcf editing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Robola Team", email = "robolaweb@foxmail.com"}
]
keywords = ["mujoco", "mjcf", "robotics", "simulation", "editor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=11.0",
    "mujoco>=3.3.0",
    "numpy>=1.20.0",
    "trimesh>=3.0.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://www.robolaweb.com"
Repository = "https://github.com/robola-dev/robola"
Documentation = "https://github.com/robola-dev/robola#readme"
Issues = "https://github.com/robola-dev/robola/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
robola = "robola.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robola"]
